--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-numpy
-gensim
-gdown
-pytesseract
-requests
-Pillow
-PyMuPDF
-tensorflow
-beautifulsoup4
-scipy
+streamlit==1.33.0
+numpy==1.24.3
+gensim==4.3.2
+scipy==1.10.1
+gdown==4.7.1
+pytesseract==0.3.10
+requests==2.31.0
+Pillow==9.5.0
+PyMuPDF==1.22.5
+tensorflow==2.11.0
+beautifulsoup4==4.12.2
